--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,7 @@
 MONGODB_URI="mongodb+srv://huzaifnabi22:huzaifnabi22@cluster0.qfelnhg.mongodb.net"
 PORT=5000
+JWT_SECRET="secret"
+
+CLOUDINARY_CLOUD_NAME='dbwv9oitw'
+CLOUDINARY_API_KEY='886869834945661'
+CLOUDINARY_SECRET='Hk6QxA3VMQy4kggt2fcYduMNqcI'
